[package]
name = "boolector"
version = "0.3.0"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Safe high-level bindings for the Boolector SMT solver"
documentation = "https://docs.rs/boolector"
repository = "https://github.com/cdisselkoen/boolector-rs"
readme = "README.md"
keywords = ["boolector", "smt", "ffi", "bindings"]
license = "MIT"

[dependencies]
boolector-sys = "0.4.0"
libc = "0.2"
